started work on new version

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"anlutro\\LaravelForm\\": "src/"
+			"anlutro\\LaravelForm\\": "src/",
+			"anlutro\\LaravelForm\\Tests\\": "tests/"
 		}
 	},
 	"minimum-stability": "stable"
