update version requirement

--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
 	],
 	"require": {
 		"php": ">=5.4.0",
-		"illuminate/html": "4.1.*",
-		"illuminate/support": "4.1.*"
+		"illuminate/html": "~4.1",
+		"illuminate/support": "~4.1"
 	},
 	"require-dev": {
 		"mockery/mockery": "dev-master"
