change package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "anlutro/php-form",
+	"name": "anlutro/form",
 	"description": "Dynamic form builder.",
 	"license": "MIT",
 	"authors": [
