change mockery version

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 		"illuminate/support": "~4.1"
 	},
 	"require-dev": {
-		"mockery/mockery": "dev-master",
+		"mockery/mockery": "*",
 		"illuminate/session": "~4.1"
 	},
 	"autoload": {
