--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,8 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - hhvm
 
-before_script:
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install --dev
+install: composer install --dev --prefer-dist
 
 script: phpunit
