--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,17 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
+  - hhvm-nightly
 
-install: composer install --dev --prefer-dist
+matrix:
+  allow_failures:
+    - php: 7.0
+    - php: hhvm-nightly
 
-script: phpunit
+install: composer update --dev --no-interaction
+
+script: phpunit --verbose
+
+sudo: false
